--- a/src/css/themes/default.css
+++ b/src/css/themes/default.css
@@ -1483,6 +1483,16 @@ select.important
 	border-color:		#990000;
 }
 
+input.important:hover,
+textarea.important:hover,
+select.important:hover,
+input.important:focus,
+textarea.important:focus,
+select.important:focus
+{
+	border-color:		#d14836;
+}
+
 
 /* Styling labels by events */
 label.error,
